--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@
             padding-bottom: lem;
             background-color: #ecfab8;
         }
-        footer #nondiclaimer .copy {
+        footer #nondisclaimer .copy {
             padding: 3.5em 3.5em 3.5em 13em;
             float: left;
             font-size: 0.9em;
@@ -96,7 +96,7 @@
             font-size: 0.85em;
             text-align: center;
         }
-        footer #nondisclaimer .socal .fa {
+        footer #nondisclaimer .social .fa {
             padding: 15px;
             font-size: 15px;
             width: 15px;
