--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
         }
         .main-header {
             background-color: rgb(255, 255, 255, 0.8);
-            width: 700px;
             margin: 2em auto 0 auto;
             min-height: 100px;
             height: 100px;
@@ -213,3 +212,13 @@
         section #pockets .pocket img {
             width: 400px;
             height: 400px;
+        }
+
+    /* gallery */
+    main #pockets li {
+        display: inline;
+    }
+    section #pockets img {
+        width: 400px;
+        height: 400px;
+    }
