--- a/styles.css
+++ b/styles.css
@@ -221,4 +221,16 @@
     section #pockets img {
         width: 400px;
         height: 400px;
+        border: 10px solid red;
+        margin: 0 0.75em;
+        padding: 1.3em 1.5em;
+        background-color:blue;
+    }
+
+    #description {
+        visibility: hidden;
+        border: 1px solid red;
+    }
+    #pockets li:hover #description {
+        visibility: visible;
     }
